--- a/resume.html
+++ b/resume.html
@@ -27,29 +27,68 @@
                         <td style="text-align: left; vertical-align:top; padding-top: 60px"><h1>Experience</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
-                                <li><a href="https://ex-situ.lri.fr" target="blank">Ex)situ Lab at INRIA Paris</a> | Paris, FR - 2020-present
-                                    <p>Research Intern</p>
-                                    <p>Currently finishing my Masters thesis in a research intern position at INRIA in Paris. Researching the process of various creative professionals (audio, visual, design, architecture), and exploring the potentials of bimanual interactions for supporting varied creative processes.</p>
+                            	<li><h2>Co-Founder/Product Designer</h2>
+                            		<a href="https://ameliate.com" target="blank">Ameliate</a> | Netherlands - 2019-Current
+                            		<ul>
+                            			<li>Developing e-healthcare tools for mental healthcare practitioners and individuals</li>
+                            			<li>Mockups, wireframes, and initial testing of iOS app</li>
+                            			<li>Developing business plan, communicating the vision to investors, and potential users</li>
+                            		</ul>
+                            		</br>
                                 </li>
-                                <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
-                                    <p>Undergraduate Researcher</p>
-                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a prototype developed by a researcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
+                                <li><h2>Interaction Researcher</h2>
+                                	<a href="https://ex-situ.lri.fr" target="blank">Ex)situ Lab at INRIA Paris</a> | Paris, FR - 2020
+                                	<ul>
+                                		<li>Led and collaborated on human-centered design projects exploring and supporting creative processes</li>
+                                		<li>Prototyping and usability testing of embodied productivity and creativity tools for creative professionals</li>
+                                		<li>User-research with creative professionals in France, U.S. and Canada</br><a href="projects-all.html">more ></a></li>
+                                	</ul>
+                                	</br>
                                 </li>
-                                <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2017-18
-                                    <p>Resident Artist</p>
-                                    <p>For 6 months I worked on art projects in the Melt Collective lab at UBC. I helped ideate then prototyped creative uses for recycled plastics. I developed a technique to mold plastic from waste plastic bags, then I built a prototype archway by manufacturing bricks using this technique and plastic bags gathered from the city. <a href="projects/melt/index.html">more ></a></p>
+                                <li><h2>Graphics/Media Production Assistant</h2>
+                                	<a href="https://ahva.ubc.ca" target="blank">Visual Art Department (UBC)</a> | Vancouver, BC - 2016-18
+                                	<ul>
+                            			<li>Led a user-centered redesign of the safety and training information architecture, coupled with an overhaul of their website into a new digital safety and training information hub</li>
+                            			<li>Introduced and evangelized user-centered methodolgies, working between students, professors, technicians, and administrators</li>
+                            			<li>Created graphic design and typography for their website, promotional materials, and special event posters, plus developed design guidelines and templates for print and digital media</br><a href="projects-all.html">more ></a></li>
+                            		</ul>
+                            		</br>
                                 </li>
-                                <li><a href="https://ahva.ubc.ca" target="blank">Visual Art Department (UBC)</a> | Vancouver, BC - 2016-18
-                                    <p>Graphics/Media Production Assistant</p>
-                                    <p>Based on data I gathered from the varied labs of the art department, I reorganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date. <a href="projects/ahva/index.html">more ></a></p>
+                                <li><h2>Undergraduate Researcher</h2>
+                                	<a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
+                                	<ul>
+                            			<li>Lead researcher for a team prototyping, designing and user-testing a kiosk application to teach seniors to use smart phones</li>
+                            			<li>Recruited seniors through local community centers and libraries, and conducted two rounds of usability testing</li>
+                            			<li>Presented work at the B.C. Tech Summit ‘18, ASSETS ’18, and to Samsung R&D, Vancouver</br><a href="projects/helpkiosk/index.html">more ></a></li>
+                            		</ul>
+                            		</br>
                                 </li>
-                                <li><a href="https://www.ck12.org" target="blank">Ck-12</a> | Palo Alto, CA - 2011-16
-                                    <p>Designer (Contract)</p>
-                                    <p>I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development. <a href="projects/ck12/index.html">more ></a></p>
+                                <li><h2>Resident Artist</h2>
+                                	<a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2017-18
+                                	<ul>
+                            			<li>Researched and prototyped creative uses for recycled plastics</li>
+                            			<li>Organized presentations on artwork and sustainability for the community, and lab visitors</li>
+                            			<li>Developed a technique to mold plastic from waste plastic bags, and built a proof-of-concept archway using plastic bags gathered from the city</br><a href="projects/melt/index.html">more ></a></li>
+                            		</ul>
+                            		</br>
                                 </li>
-                                <li><u class="fakelink">4Band</u> | Mountain View, CA - 2013-14
-                                    <p>UI/UX Designer and Lead Illustrator</p>
-                                    <p>As illustrator for this small music collaboration startup, I was tasked with the company logo and branding, as well as creating the UI elements of the software. With one other designer, I designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within. <a href="projects/design/index.html">more ></a></p>
+                                <li><h2>Design Contractor</h2>
+                                	<a href="https://www.ck12.org" target="blank">Ck-12 Foundation</a> | Palo Alto, CA - 2011-16
+                                	<ul>
+                            			<li>User-center web and mobile app design mockups, wireframes and interactive prototyping,  with presentations to the executive team</li>
+                            			<li>Conceptualized and designed a new “Study Guides” feature</li>
+                            			<li>Refined and tested content tools, liaised between development team and science teachers</br><a href="projects/ck12/index.html">more ></a></li>
+                            		</ul>
+                            		</br>
+                                </li>
+                                <li><h2>UI/UX Designer & Lead Illustrator</h2>
+                                	<u class="fakelink">4Band</u> | Mountain View, CA - 2013-14
+                                	<ul>
+                            			<li>Designed the company logo, and developed design boards for company-wide look-and-feel</li>
+                            			<li>Pixel-perfect icons and graphics for the music editing software</li>
+                            			<li>Collaborated with one other designer to define UX guidelines and the overall user experience of this collaborative music editing software</li>
+                            		</ul>
+                            		</br>
                                 </li>
                             </ul>
                         </td>
@@ -72,6 +111,15 @@
                                     <p>InDesign</p>
                                 </li>
                                 <li>
+                                    <p>Sketch</p>
+                                </li>
+                                <li>
+                                    <p>Figma</p>
+                                </li>
+                                <li>
+                                    <p>Marvel</p>
+                                </li>
+                                <li>
                                     <p>AfterEffects</p>
                                 </li>
                                 <li>
@@ -79,12 +127,6 @@
                                 </li>
                                 <li>
                                     <p>FinalCut Pro</p>
-                                </li>
-                                <li>
-                                    <p>Sketch</p>
-                                </li>
-                                <li>
-                                    <p>Figma</p>
                                 </li>
                                 <li>
                                     <p>Keynote</p>
@@ -142,13 +184,16 @@
                                     <p>HTML/CSS</p>
                                 </li>
                                 <li>
+                                    <p>iOS/Android</p>
+                                </li>
+                                <li>
                                     <p>Arduino</p>
                                 </li>
                                 <li>
                                     <p>SVN/Git</p>
                                 </li>
                                 <li>
-                                    <p>Unity</p>
+                                    <p>Unity3D</p>
                                 </li>
                             </ul>
                         </td>
@@ -184,10 +229,10 @@
                         <td style="text-align: left; width:85%;">
                             <ul>
                                 <li><a href="https://www.eitdigital.eu/eit-digital-academy/master-school/" target="blank">European Institute of Innovation and Technology</a>
-                                    <p>MSc in Human-Computer Interaction Design with a minor in Innovation and Entrepreneurship.</p>
+                                    <p>MSc; Human-Computer Interaction Design, with a minor in Innovation and Entrepreneurship.</p>
                                 </li>
                                 <li><a href="https://www.ubc.ca" target="blank">University of British Columbia</a>
-                                    <p>BAs in Computer Science and Visual Art.</p>
+                                    <p>BA; Double Major in Computer Science and Visual Art.</p>
                                 </li>
                             </ul>
                         </td>
