--- a/projects-all.html
+++ b/projects-all.html
@@ -226,6 +226,9 @@
     <p>
       These are more smaller projects I've worked on, including more traditional graphic design and illustration, as well as interaction and experience design.
     </p>
+    <p>
+    	For examples of my work as a photographer for the Art Department at UBC, please see the exhibition and event archive from 2016-2018 at: <a href="https://ahva.ubc.ca/ahva-gallery-home/archives/2017-18-exhibitions/">gallery.ahva.ubc</a>.
+    </p>
 
     <table>
       <tr class="thumbnails">
@@ -329,7 +332,7 @@
  </li>
  <li><a href="projects/artworks/index.html">Other art projects</a> - 2014-19<br/>
    #visual-design #interaction-design #prototyping #iterative-design #illustration
-   <p style="margin-top: 3px">Various other art projects from my undergraduate art degree and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
+   <p style="margin-top: 3px">Various other art projects from my undergraduate art degree and beyond: ranging from traditional painting, to photography, to experimental wearables, and robotic sculptures.</p>
  </li>
 </ul>
 <hr>
