--- a/about/technofidgets.html
+++ b/about/technofidgets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Zack Wilson - Portfolio</title>
+  <title>Zack Wilson - TechnoFidgets</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
