--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -67,12 +67,12 @@
       
     </header>
 
-    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/technofidgets/03.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/ahvahub/audain.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 text-center">
             <a href="index.html">< Back</a>
-            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Creativity Techno-Fidgets</h1>
+            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Safety and Training</br>Information Hub</h1>
           </div>
         </div>
       </div>
