fixed blog post 1

--- a/about/blog.html
+++ b/about/blog.html
@@ -103,7 +103,7 @@
 							<div class="image" style="background-image: url('/images/technofidgets/03.jpg);"></div>
 							<div class="text">
 
-								<h3 class="font-weight-light"><a href="single-post.html">Creativity Techno-Fidgets</a></h3>
+								<h3 class="font-weight-light"><a href="technofidgets.html">Creativity Techno-Fidgets</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Exploring the design space of embodied creativity support tools at the INRIA human-computer interaction research lab in Paris.</small></span></div>
 							</div>
 						</div>
