--- a/about/blog.html
+++ b/about/blog.html
@@ -100,7 +100,7 @@
 
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('/images/technofidgets/03.jpg);"></div>
+							<div class="image" style="background-image: url('images/technofidgets/03.jpg');"></div>
 							<div class="text">
 
 								<h3 class="font-weight-light"><a href="technofidgets.html">Creativity Techno-Fidgets</a></h3>
