--- a/about/blog.html
+++ b/about/blog.html
@@ -54,7 +54,7 @@
 
 							<ul class="site-menu js-clone-nav d-none d-lg-block">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">C.V.</a></li>
+								<!-- <li><a href="about.html">C.V.</a></li> -->
 								<li class="active"><a href="blog.html">Blog</a></li>
 							</ul>
 						</nav>
