--- a/about/index.html
+++ b/about/index.html
@@ -131,7 +131,7 @@
 							<div class="image" style="background-image: url('images/meethalfway/01.jpg');"></div>
 							<div class="text">
 
-								<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway</a></h3>
+								<h3 class="font-weight-light"><a href="../projects-all.html">MeetHalfway</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span></div>
 							</div>
 						</div>
@@ -140,7 +140,7 @@
 							<div class="image" style="background-image: url('images/ck12/01.jpg');"></div>
 							<div class="text">
 
-								<h3 class="font-weight-light"><a href="ck12.html">Ck-12 Foundation</a></h3>
+								<h3 class="font-weight-light"><a href="../projects-all.html">Ck-12 Foundation</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Illustrating digital textbooks, designing web and mobile content delivery systems, and providing testing for beta-content tools.</small></span></div>
 							</div>
 						</div>
