--- a/about/blog.html
+++ b/about/blog.html
@@ -120,7 +120,7 @@
 
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/img_3.jpg');"></div>
+							<div class="image" style="background-image: url('images/fabricwave.jpg');"></div>
 							<div class="text">
 
 								<h3 class="font-weight-light"><a href="#">Making a wave...</a></h3>
@@ -130,7 +130,7 @@
 
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/img_4.jpg');"></div>
+							<div class="image" style="background-image: url('images/aiart.jpg');"></div>
 							<div class="text">
 
 								<h3 class="font-weight-light"><a href="#">A.I. Art Installation</a></h3>
@@ -143,7 +143,7 @@
 
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/meethalfway/01.jpg');"></div>
+							<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
 							<div class="text">
 
 								<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway</a></h3>
