--- a/about/technofidgets.html
+++ b/about/technofidgets.html
@@ -126,6 +126,15 @@
         <div class="nonloop-block-13 owl-carousel">
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/technofidgets/09.jpg" alt="Image" class="img-fluid">
+            </div>
+            <div class="">
+              <p>Early explorations in fidget and manual tool properties.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/technofidgets/05.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
