more blog updates

--- a/about/blog2.html
+++ b/about/blog2.html
@@ -89,6 +89,9 @@
 								<li>
 									<div class="podcaster">
 										<span class="d-block">Here are some of my latest projects, exploring UX, art, and technology.</span>
+										
+										<span class="small">Apologies for missing links, this blog is still under construction...</span>
+										<span class="small"></br></span>
 										<span class="small">Check back for updates!</span>
 									</div>
 								</li>
@@ -98,60 +101,48 @@
 
 					<div class="col-lg-9">
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/technofidgets/03.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="technofidgets.html">Creativity Techno-Fidgets</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Exploring the design space of embodied creativity support tools at the INRIA human-computer interaction research lab in Paris.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/blog_header.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/">Neural Net Photography</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An experimentation in using style-matching neural networks to generate digital photography artworks.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/fabricwave.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="#">Making a wave...</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-dimensional sculpture project.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/aiart.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="#">A.I. Art Installation</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Installed at GDP in Paris, style matching genereative GAN artwork</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
+							<div class="image" style="background-image: url('images/poemsformath.png');"></div>
 							<div class="text">
 
-								<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span>
+								<h3 class="font-weight-light"><a href="PoemsForMath.pdf" target="blank">Poems for Math</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A small collection of original visuals and poems about algorithms and math.</small></span>
 								</div>
 							</div>
 						</div>
+
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/heatball2.jpg');"></div>
+							<div class="text">
+
+								<h3 class="font-weight-light"><a href="#">Meditation Ball</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A hand-held ball game to support and guide mindfulness meditation using temperature.</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/glitch.jpg');"></div>
+							<div class="text">
+
+								<h3 class="font-weight-light"><a href="#">Glitch Art</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Experiments in creating artwork using corrupted files and file corruption.</small></span>
+								</div>
+							</div>
+						</div>
+
 					</div>
-					
 					<div class="container" data-aos="fade-up">
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="site-block-27">
 									<ul>
-										<li><a href="#" class="icon-keyboard_arrow_left"></a></li>
-										<li class="active"><span>1</span></li>
-										<li><a href="blog2.html">2</a></li>
+										<li><a href="blog.html" class="icon-keyboard_arrow_left"></a></li>
+										<li><a href="blog.html">1</a></li>
+										<li class="active"><span>2</span></li>
 										<!-- <li><a href="#">3</a></li>
 										<li><a href="#">4</a></li>
 										<li><a href="#">5</a></li> -->
-										<li><a href="blog2.html" class="icon-keyboard_arrow_right"></a></li>
+										<li><a href="#" class="icon-keyboard_arrow_right"></a></li>
 									</ul>
 								</div>
 							</div>
