--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
 								<li class="active">
 									<a href="index.html">Home</a>
 								</li>
-								<!-- <li><a href="about.html">C.V.</a></li> -->
+								<li><a href="about.html">C.V.</a></li>
 								<li><a href="blog.html">Blog</a></li>
 							</ul>
 						</nav>
