--- a/about/about.html
+++ b/about/about.html
@@ -88,7 +88,7 @@
           </div>
           <div class="col-lg-10">
             <h4>Co-Founder/Product Designer</h4>
-            <h6>Ameliate, The Netherlands/Remote</h6>
+            <h6>Ameliate, The Netherlands / Remote</h6>
             <ul>
               <p>Developing e-healthcare tools for mental healthcare practitioners and individuals</p>
               <p>Mockups, wireframes, and initial testing of iOS app</p>
@@ -148,7 +148,7 @@
           </div>
           <div class="col-lg-10">
             <h4>Design Contractor</h4>
-            <h6>Ck-12 Foundation, Palo Alto, USA</h6>
+            <h6>Ck-12 Foundation, Palo Alto, USA / Remote</h6>
             <ul>
               <p>User-center web and mobile app design mockups, wireframes and interactive prototyping,  with presentations to the executive team.</p>
               <p>Conceptualized and designed a new “Study Guides” feature.</p>
