links styled better

--- a/about/index.html
+++ b/about/index.html
@@ -102,9 +102,9 @@
 									<div class="podcaster" style="line-height: 1.5">
 										<span class="d-block">Here are some of the projects</br>I've been working on lately.</span>
 									</br>
-									<span class="d-block">For my complete CV and experiences please visit my <a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/">LinkedIn</a>.</span>
+									<span class="d-block">For my complete CV and experiences please visit my <a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/" style="border-bottom: 2px dotted; padding-bottom: 0;">LinkedIn</a>.</span>
 								</br>
-								<span class="d-block">Check out my <a href="blog.html">blog</a> for more experimental projects.</span>
+								<span class="d-block">Check out my <a href="blog.html" style="border-bottom: 2px dotted; padding-bottom: 0;">blog</a> for more experimental design and art projects.</span>
 							</div>
 						</li>
 					</ul>
