--- a/about/blog2.html
+++ b/about/blog2.html
@@ -117,7 +117,7 @@
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/heatball2.jpg');"></div>
+							<div class="image" style="background-image: url('images/mediball/heatball.jpg');"></div>
 							<div class="text">
 
 								<h3 class="font-weight-light"><a href="#">Meditation Ball</a></h3>
