meditation ball blog post

--- a/about/blog2.html
+++ b/about/blog2.html
@@ -117,11 +117,11 @@
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/mediball/heatball.jpg');"></div>
+							<div class="image" style="background-image: url('images/meditation/03.jpg');"></div>
 							<div class="text">
 
-								<h3 class="font-weight-light"><a href="#">Meditation Ball</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A hand-held ball game to support and guide mindfulness meditation using temperature.</small></span>
+								<h3 class="font-weight-light"><a href="meditation.html">Thermal Meditation Ball</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A 'serious game' designed to support and guide mindfulness meditation using a ball and temperature changes.</small></span>
 								</div>
 							</div>
 						</div>
