--- a/about/blog.html
+++ b/about/blog.html
@@ -78,7 +78,6 @@
 				<div class="row align-items-center">
 					<div class="col-12 text-center">
 						<h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Projects Blog</h1>
-						<!-- <a href="index.html">Home</a><span class="mx-2">&bullet;</span> C.V. -->
 					</div>
 				</div>
 			</div>
@@ -114,24 +113,24 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/blog_header.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/">Neural Net Photography</a></h3>
+								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/" target="blank">Neural Net Photography</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An experimentation in using style-matching neural networks to generate digital photography artworks.</small></span></div>
 							</div>
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/fabricwave.jpg');"></div>
+							<div class="image" style="background-image: url('images/fabricwave/01.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">Making a wave...</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-dimensional sculpture project.</small></span></div>
+								<h3 class="font-weight-light"><a href="#">Fabric Wave Machine</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-dimensional sculpture project using modular fabric and electronics, presented at GDP Paris, and now installed in the Ex)situ Lab at INRIA Paris.</small></span></div>
 							</div>
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/aiart.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">A.I. Art Installation</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Installed at GDP in Paris, style matching genereative GAN artwork</small></span></div>
+								<h3 class="font-weight-light"><a href="#">The A.I. Painter</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An A.I.-based art installation at GDP Paris, using a style matching generative GAN artwork.</small></span></div>
 							</div>
 						</div>
 
