--- a/about/blog.html
+++ b/about/blog.html
@@ -121,7 +121,7 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/fabricwave/01.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">Fabric Wave Machine</a></h3>
+								<h3 class="font-weight-light"><a href="wavemachine.html">Fabric Wave Machine</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-dimensional sculpture project using modular fabric and electronics, presented at GDP Paris, and now installed in the Ex)situ Lab at INRIA Paris.</small></span></div>
 							</div>
 						</div>
