--- a/about/blog.html
+++ b/about/blog.html
@@ -127,10 +127,10 @@
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/aiart.jpg');"></div>
+							<div class="image" style="background-image: url('images/aiartist/01.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">The A.I. Painter</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An A.I.-based art installation at GDP Paris, using a style matching generative GAN artwork.</small></span></div>
+								<h3 class="font-weight-light"><a href="aiartist.html">The AI Artist</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An AI-based art installation at GDP Paris, using a style matching generative GAN artwork trained on classical protrait painting.</small></span></div>
 							</div>
 						</div>
 
