--- a/about/meditation.html
+++ b/about/meditation.html
@@ -145,6 +145,15 @@
         <div class="nonloop-block-13 owl-carousel">
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/meditation/15.jpg" alt="Image" class="img-fluid">
+            </div>
+            <div class="">
+              <p>The hollowed out ball for the electronics.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/meditation/06.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
