--- a/about/blog2.html
+++ b/about/blog2.html
@@ -109,7 +109,6 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/poemsformath.png');"></div>
 							<div class="text">
-
 								<h3 class="font-weight-light"><a href="PoemsForMath.pdf" target="blank">Poems for Math</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A small collection of original visuals and poems about algorithms and math.</small></span>
 								</div>
@@ -119,7 +118,6 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/meditation/03.jpg');"></div>
 							<div class="text">
-
 								<h3 class="font-weight-light"><a href="meditation.html">Thermal Meditation Ball</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A 'serious game' designed to support and guide mindfulness meditation using a ball and temperature changes.</small></span>
 								</div>
@@ -129,9 +127,26 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/glitch.jpg');"></div>
 							<div class="text">
-
 								<h3 class="font-weight-light"><a href="#">Glitch Art</a></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Experiments in creating artwork using corrupted files and file corruption.</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/glitchme.jpg');"></div>
+							<div class="text">
+								<h3 class="font-weight-light"><a href="https://glitch.com/@zlwilson" target="blank">V/AR Art</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>My glitch.me profile contains some V/AR projects in art and poetry.</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/conspiracy.jpg');"></div>
+							<div class="text">
+								<h3 class="font-weight-light"><a href="https://zlwilson.github.io/conspiracy/conspiracy.html" target="blank">Conspiracy Theory Generator</a></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Generate your very own conspiracy theory website!</small></span>
 								</div>
 							</div>
 						</div>
